--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "next": "14.2.30",
     "react": "^18",
+    "react-big-calendar": "^1.19.4",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18",
     "react-hook-form": "^7.60.0",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^18",
     "@types/react-input-mask": "^3.0.6",
     "eslint": "^8",
