--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-modal": "^3.16.3",
     "react-phone-input-2": "^2.15.1",
     "react-promise-tracker": "^2.1.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
